--- a/src/main/webapp/apply/usere/record.html
+++ b/src/main/webapp/apply/usere/record.html
@@ -18,19 +18,37 @@
 			<select style="float: right">
 				<option>全部</option>
 				<option>已查看</option>
-			</select>
-		<br/>
+			</select> <br />
 		</div>
-
+		<br />
 		<div class="record">
-			
-			<div>
-			
-			
+			<div class="bar">
+				<span style="float: left; margin-left: 10px; margin-top: 2px;">投递职位：动力总工程师</span>
+				<span style="float: right; margin-right: 10px; margin-top: 2px;">投递日期：2015-01-02</span>
 			</div>
-			
-			
-			
+			<div class="middle">
+				<div style="float: left; line-height: 80px">
+					<input type="checkbox">
+				</div>
+				<div style="float: left; margin-top: 5px; margin-left: 20px;">
+					<img height="80px" width="80px" /><br /> <span
+						style="margin-left: 21px">张龙</span>
+				</div>
+				<div style="float: right; margin-top: 5px; width: 670px;">
+					<div>
+						<span style="float: left;"><a href="#">开发工程师</a>|深圳科技|2013.01-至今(2年5个月)</span> <span
+							style="float: right; margin-right: 10px;">人选状态：筛选中</span> <br />
+						<br /> <span style="float: left;">男|32|博士|北京林业大学|广州|9年经验</span> <br />
+					</div>
+					<hr
+						style="border: 1px dashed #F00; margin-right: 10px; border-bottom: 0; border-right: 0; border-left: 0;">
+					<div>
+						<input type="button" style="float: right; margin-right: 10px;"
+							value="暂不合适" /> <input type="button"
+							style="float: right; margin-right: 10px;" value="目标人选" />
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 
